@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<manifest package="org.rncbc.qmidictl" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.5.5" android:versionCode="10" android:installLocation="auto">
+<manifest package="org.rncbc.qmidictl" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.5.6" android:versionCode="11" android:installLocation="auto">
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28"/>
 
     <!-- The following comment will be replaced upon deployment with default permissions based on the dependencies of the application.
